2008-10-13  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.pas (BalloonSize, BalloonHeight, BalloonWidth):
	new functions

2008-10-09  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (read_text_file): new function
	(handle_credits_command): use read_text_file

	* avatarsay.c (handle_width_command, handle_height_command)
	(handle_size_command): initialize if needed

2008-10-07  Andreas K. Foerster  <info@akfoerster.de>

	* avtterm.c (avtterm_run):
	reject filedescriptors less than zero

	* avtterm.c (avtterm_start): code cleanup

2008-10-05  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (handle_title_command):
	remove leading whitespace

	* avtterm (escape_sequence, CSI_sequence):
	hooks for application keypad (not really supported yet)

2008-10-04  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_set_title):
	new functions
	(avt_initialize): improve handling of NULL for title, icontitle

2008-10-03  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (avatar_command):
	commands: slow on, slow off

	* avatarsay.c (menu):
	always check if the avatarimage was changed
	(ask_file): remove the check there

	* avatarsay.c (change_avatar_image):
	new function
	(handle_avatarimage_command): adapted
	(avatar_command): "avatarimage none"
	(avatar_command): avatarimage with no name restores default img

	* avtterm.h, avtterm.c:
	renamed functions:
	execute_process -> avtterm_start
	process_subprogram -> avtterm_run
	avtarsay.c: adapted
	
	* avtterm.h, avtterm.c (avtterm_update_size):
	new function
	avtarsay.c: adapted

	* avatar.c (avt_draw_balloon):
	fix drawing the balloon with no avatar image

2008-10-01  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay (avatar_command):
	allow "size", "height" and "width" with no parameters

	* avatarsay (avatar_command):
	new commands: wait, move in, move out

2008-09-30  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay (handle_audio_command):